[gd_scene load_steps=4 format=2]

[ext_resource path="res://asset_files/one_pixel.tres" type="Texture" id=1]
[ext_resource path="res://source_files/world/floors_and_platforms/falling_floor.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.5, 0.5 )

[node name="FallingFloor" type="StaticBody2D"]
scale = Vector2( 750, 20 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
shake_direction = Vector2( 1, 0 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.439216, 0.376471, 0.262745, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision = true

[node name="TimerBeforeFall" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[node name="FallTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="."]
playback_speed = 0.75
playback/speed = 0.75
[connection signal="timeout" from="TimerBeforeFall" to="." method="_on_TimerBeforeFall_timeout"]
[connection signal="timeout" from="FallTimer" to="." method="_on_FallTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
